# aiw2

./: .gitignore  AIW-GUI.glade  Alice.cabal  Alice.hs  AliceLib.hs  Arith.hs  Astar.hs  IP.hs  Instances.hs  Instances_old.hs  Interpreter.hs  Logic.hs  Merge.hs  MulAgent.hs  NewAgent.hs  Parsing.hs  README.md  TestData.hs  Truth.hs  ni.hs
Domains/: Arithmetic.hs  English.hs  PropLogic.hs  XOR.hs
