Name:           Alice
Version:        2.0
Cabal-Version:  >= 1.18
License:        BSD3
Author:         Abdul Rahim Nizamani, Claes Strannegård
Synopsis:       Alice In Wonderland
Build-Type:     Simple

Executable Alice
  default-language: Haskell2010
  build-depends:
    base,
    QuickCheck,
    text,
    time,
    mtl,
    gtk,
    containers <=5.0,
    directory,
    ansi-terminal,
    parallel,
    monad-parallel,
    astar,
    array,
    random
  Main-Is:        Alice.hs
